fix: input placeholder color in dark mode

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -23,4 +23,8 @@
   .field_with_errors select {
     @apply select-error;
   }
+
+  .input {
+    @apply dark:placeholder-gray-500;
+  }
 }
